# QtProject

CoinFlip/: 13_CoinFlip.pro  13_CoinFlip.pro.user.275e73c  CMakeLists.txt  CoinFlip.pro  chooselevelscene.cpp  chooselevelscene.h  gameconfig.cpp  gameconfig.h  logo.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mycoin.cpp  mycoin.h  mypushbutton.cpp  mypushbutton.h  playscene.cpp  playscene.h  res.qrc
NotePad/: CMakeLists.txt  NotePad.pro  NotePad.pro.user.4d51544  NotePad.pro.user.a2230cb  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  subtext.cpp  subtext.h
QtDemo/3_Table/: .qmake.stash  3_Table.pro.user.22  3_Table.vcxproj
QtDemo/3_Table/debug/3_Table.tlog/: 3_Table.lastbuildstate  3_Table.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
QtDemo/3_Table/debug/qmake/: qtvars_x64_Debug.props
QtDemo/3_Table/debug/qmake/temp/: 0B2AE397-CD58-3CF0-A8AF-A340F5174C81.3_Table.designtime.idx  Makefile
QtDemo/3_Table/release/qmake/temp/: 0B2AE397-CD58-3CF0-A8AF-A340F5174C81.3_Table.designtime.idx  Makefile  props.txt  qtvars_x64_Release.props
build-NotePad-Desktop_Qt_5_12_9_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp  moc_subtext.cpp  qrc_res.cpp  ui_mainwindow.h
build-NotePad-Desktop_Qt_5_12_9_clang_64bit-Debug/NotePad.app/Contents/: Info.plist
build-NotePad-Desktop_Qt_5_12_9_clang_64bit-Debug/NotePad.app/Contents/MacOS/: NotePad
